# Main_Control

./: README.md
flask_gcs/: app.py  mission_plan.txt
flask_gcs/templates/: index.html
ping_tester/: app.py
ping_tester/templates/: index.html
rado_control_3/: CMakeLists.txt  package.xml
rado_control_3/config/: mission_plan.txt
rado_control_3/launch/: rado_mission.launch.py
rado_control_3/scripts/: coordinate_follower_node.py  state_manager_node.py  system_monitor_node.py
rado_control_3/web_gui/: index.html
rado_control_3/web_gui/css/: style.css
rado_control_3/web_gui/js/: config.js  main.js  map_module.js  ros_module.js
